--- a/css/style.css
+++ b/css/style.css
@@ -502,3 +502,153 @@ color:#9a9a9a;
   padding-left: 23px !important;
   background: #0a0a0a    !important;
 }
+
+
+/*profile page*/
+
+.profile-container{
+  padding:20px 15%;
+  color:#626262;
+}
+.cover-img{
+  width:100%;
+  border-radius:6px;
+  margin-bottom:14px;
+}
+.profile-details{
+  background:var(--bg-color);
+  padding:20px;
+  border-radius:20px;
+  display:flex;
+  justify-content:space-between;
+  align-item:flex-start;
+}
+.pd-row{
+  display:flex;
+  align-item:flex-start;
+}
+.pd-img{
+  width:100px;
+  margin-right:20px;
+  border-radius:6px;
+
+}
+.pd-row div h3{
+font-size:25px;
+font-weight:600;
+}
+.pd-row div h3{
+  font-size:13px;
+}
+.pd-row div img{
+  width:25px;
+  border-radius:50%;
+  margin-top:12px;
+}
+
+.pd-right button{
+background:#1876F2;
+border: 0;
+outline:0;
+padding:6Px 10px;
+display:inline-flex;
+align-item:center;
+color:#fff;
+border-radius:3px;
+margin-left:10px;
+cursor:pointer;
+}
+.pd-right button img{
+  height:15px;
+  margin-right:10px;
+}
+.pd-right button:first-child{
+   background:#e4e6eb;
+}
+.pd-right{
+text-align:right;
+}
+.pd-right a{
+  background:e4e6eb;
+  border-radius:3px;
+  padding:12px;
+  display:inline-flex;
+  margin-top:30px;
+
+}
+.pd-right a img {
+  width:20px;
+
+}
+.profile-info{
+  display:flex;
+  align-self:space-between;
+  justify-content:space-between;
+  margin-top:20px;
+
+}
+.info-col{
+  flex-basis:33%;
+
+}
+.post-col{
+  flex-base:63%;
+  margin-left:15px;
+
+}
+.profile-intro{
+  background:var(--bg-color);
+  padding:20px;
+  margin-bottom:4px;
+  border-radius:4px;
+}
+.profile-intro h3{
+  font-weight:600;
+}
+.profile-intro p{
+
+}
+.intro-text{
+  text-align:center;
+  margin:10px 0;
+  font-size:15px;
+}
+.intro-text img {
+  width:15px;
+  margin-bottom:3px;
+  align-item:center;
+}
+.profile-intro hr{
+  border:0;
+  settings_menu_height;1px;
+  background:#ccc;
+  margin:24px 0;
+}
+.profile-intro  ul li{
+  list-style:none;
+  font-size:15px;
+  margin:15px;
+  display:flex;
+  align-item:center;
+
+}
+.profile-intro  ul li img{
+  width:26px;
+  margin-right:10px;
+}
+.title-box{
+  display:flex;
+  align-item:center;
+  justify-content:space-between;
+
+}
+.title-box a{
+  text-decoration:none;
+  color:#1876f2;
+  font-size:14px;
+}
+.photo-box{
+  display:grid;
+  grid-template-columns:repeat(3,auto);
+
+}
